Unpaid Invoice listing printout now handles five digit references

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                     
+3:17 PM 8/4/2021	CL	Upaid Invoice program print out now handles 5 digit references
 12:23 07/21/2021	CO	5.75156  
 12:20 PM 7/28/2021	UB	Improve syntax for Neptune hand held client 3025 
 11:59 07/21/2021	CO	5.75155   
