--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                          
+11:54 AM 9/24/2021	GL	Fixed: Using Checkbook's General Ledger Chart of Accounts messed up the GL Account index
 11:23 09/21/2021	CO	5.75162  
 11:20 09/21/2021	CO	5.75161   
 12:21 09/21/2021	CO	5.75160    
