publishingglaccount for hamster and other cleaning stuff and a fix for a 304 in client

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                
+8:14 AM 10/20/2021	CO	Menu - removed the Facebook link
 18:17 10/21/2021	CO	5.75168  
 15:42 10/21/2021	CO	5.75167   
 12:06 10/21/2021	CO	5.75166    
