new CO Systems 2 to make way for longer system ids though not support by most tables yet (like support, rates, etc) cleaning GL hamster stuff a bit more las check in for w2suplimental before it's removed as it's obsoluete, but the layout will stay, just in case Enter Transactions (Legacy) is now removed as Enter Transactions replaces it finally.

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                      
+1:34 PM 10/26/2021	GL	removed access to Enter Transactions (Legacy) as the new Enter Transactions replaces it completely.
  9:57 10/21/2021	CO	5.75174  
 21:09 10/21/2021	CO	5.75173   
 12:08 10/21/2021	CO	5.75172    
@@ -1717,7 +1718,7 @@ To remove a favorite click Delete and then click the Favorite you no longer want
 9:11 AM 1/7/2015	UB	added a dashboard area with Last Billing Date                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 4:21 PM 1/5/2015	PR	touch up employee search                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 10:23 AM 1/2/2015	GL	fixed multiple remote data issues with comboboxes prmstr                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
-9:54 AM 1/2/2015	GL	fixed 4152 with remote data prindex issues                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
+9:54 AM 1/2/2015	GL	fixed 4152 with remote data PRIndex issues                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 9:54 AM 1/2/2015	CO	fixed numeric entry issues with editing numbers                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 3:14 PM 12/31/2014	PR	Withholdings for Federal, AR, LA, OK, IL updated                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 3:14 PM 12/31/2014	CO	mask 10 - currency - no longer places commas in fields (the math was not allowing for the old full field size)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
