Cash Receipts Journal now offers totals by rate codes

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                       
+1:00 PM 11/9/2021	UB	Cash Receipts Journal - new option to Total by Rate added, also dates now default to last month and other options remember settings between uses
 13:57 10/21/2021	CO	5.75175  
 1:34 PM 10/26/2021	GL	removed access to Enter Transactions (Legacy) as the new Enter Transactions replaces it completely. 
 9:57 10/21/2021	CO	5.75174   
