Cash Receipts Journal fixes Collections Only and adds a new Export option

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                         
+9:36 AM 11/11/2021	UB	Cash Receipts Jouornal - new option to include Collections Only (filters Credit and Debit Memos) and a new option to Export, which includes even more information used to build and accumulate the report.
 16:06 11/21/2021	CO	5.75177  
 13:02 11/21/2021	CO	5.75176   
 1:00 PM 11/9/2021	UB	Cash Receipts Journal - new option to Total by Rate added, also dates now default to last month and other options remember settings between uses  
