adding notes about re-added Enter Transasactions (Legacy)

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                             
+10:44 AM 12/3/2021	GL	Enter Transactions (Legacy) was added back to menu as some client just prefer the older process
 10:56 12/21/2021	CO	5.75182  
 8:03 AM 11/19/2021	GL	Enter Transactions - Print Proof Totals was missing column headings. Fixed. 
 12:23 11/21/2021	CO	5.75181   
