--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                               
+4:01 PM 12/14/2021	UB	Corrections made to bill sort orders for some clients
  8:11 12/21/2021	CO	5.75184  
 8:09 AM 12/14/2021	UB	Corrected issues with Add Company 
 8:08 AM 12/14/2021	CO	Fixed an issue causing Delete Company to fail 
