ub labels now support alphaSort

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                  
+10:14 AM 12/22/2021	UB	AlphaSort sequence added to Labels
 10:12 12/21/2021	CO	5.75187  
 10:01 12/21/2021	CO	5.75186   
 16:03 12/21/2021	CO	5.75185    
