fed 2022 taxes are set to deduct same as 2021

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,6 +1,7 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                      
-20:38 12/21/2021	CO	5.75191  
+10:10 01/22/2022	CO	5.75191  
+10:09 AM 1/1/2022	PR	temp patch to allows 2022 federal taxes to be calculated as 2021 until new rates are researched 
 23:24 12/21/2021	CO	5.75190   
 10:31 12/21/2021	CO	5.75189    
 10:16 12/21/2021	CO	5.75188     
