IL withholding completed

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                       
+9:31 AM 1/4/2022	PR	IL Withholding Tables updated for 2022
 4:46 PM 1/3/2022	PR	Federal Withholding Tables updated for 2022 and various enhancements to Check Payroll Calculation program
 10:10 01/22/2022	CO	5.75191  
 10:09 AM 1/1/2022	PR	temp patch to allows 2022 federal taxes to be calculated as 2021 until new rates are researched 
