--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                       
+10:14 AM 1/4/2022	PR	MO Withholding Tables updated for 2022
 9:31 AM 1/4/2022	PR	IL Withholding Tables updated for 2022
 4:46 PM 1/3/2022	PR	Federal Withholding Tables updated for 2022 and various enhancements to Check Payroll Calculation program
 10:10 01/22/2022	CO	5.75191  
