more tables updated

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                        
+11:18 AM 1/4/2022	PR	TX, AR, and GA Withholding Tables updated for 2022
 10:14 01/22/2022	CO	5.75193  
 10:14 AM 1/4/2022	PR	MO Withholding Tables updated for 2022 
 9:31 AM 1/4/2022	PR	IL Withholding Tables updated for 2022 
