1099-NEC now support 3 per page instead of 2 per page - backgrounds are still in works, but Copy 1 is available in 3 per page

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                              
+3:17 PM 1/12/2022	CO	1099-NEC now support 3 per page instead of 2 per page - backgrounds are still in works, but Copy 1 is available in 3 per page
 14:09 01/22/2022	CO	5.75199  
 2:07 PM 1/12/2022	UB	added active customer count to Menu 
 14:07 01/22/2022	CO	5.75198   
