box 1 now forced for GL (not PR nor CL yet)

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                   
+10:26 AM 1/16/2022	GL	Print 1099-NEC now always uses box 1 to print the accumulated Type's ammount into.
 16:53 01/22/2022	CO	5.75204  
 12:42 01/22/2022	CO	5.75203   
 9:34 01/22/2022	CO	5.75202    
