--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                     
+8:07 AM 1/20/2022	CO	Better handled CL, PR, UB Chart of Accounts (glaccount) in Hamster Fio
 16:09 01/22/2022	CO	5.75206  
 10:28 01/22/2022	CO	5.75205   
 10:26 AM 1/16/2022	GL	Print 1099-NEC now always uses box 1 to print the accumulated Type's ammount into.  
