much improved GL account handling in PR

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1403,8 +1403,8 @@ To remove a favorite click Delete and then click the Favorite you no longer want
 3:07 PM 9/20/2016	UB	corrected 2282 in enter collections, review customer, transaction history                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 2:00 PM 9/16/2016	CO	5.5062                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 1:56 PM 9/16/2016	CO	significant speed enhancments for repeated comboboxes on same screen                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
-2:37 PM 9/15/2016	CO	Speed enhancements to fnrgl$ and inclusion of fnrglbig$                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
-2:37 PM 9/15/2016	CO	Speed enhancements to reading routines for combof and fnqgl                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
+2:37 PM 9/15/2016	CO	Speed enhancements to fnRgl$ and inclusion of fnrglbig$                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
+2:37 PM 9/15/2016	CO	Speed enhancements to reading routines for combof and fnQgl                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 2:37 PM 9/15/2016	CO	5.5060                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 10:00 AM 9/13/2016	CL	enhanced generic check routine, specifically for client 2689                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 3:05 PM 9/12/2016	PR	changed check format for client 2689                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
