a whole lot better with those GL numbers - still havn't cracked all billings issue yet

--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                       
+1:41 PM 1/22/2022	Pr	Print Payroll Checks - now remembers last setting of type (Regular Check or Direct Deposit) from prior use
  8:24 01/22/2022	CO	5.75209  
 8:10 01/22/2022	CO	5.75208   
 8:07 AM 1/20/2022	CO	Better handled CL, PR, UB Chart of Accounts (glaccount) in Hamster Fio  
