--- a/Core/Release_Notes.txt
+++ b/Core/Release_Notes.txt
@@ -1,5 +1,6 @@
 Time and Date 		Sys	Program(s) and Change(s) Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
 ______________________	___	____________________________________________________________________________________________________________________________________________________________________________________________________________________________________                                                                                                                                                           
+9:02 AM 1/24/2022	CO	1099-Misc added since old universal 1099 program became specific to the 1099-NEC, now both are available in their own formats (2021+)
 20:10 01/22/2022	CO	5.75213  
 20:05 01/22/2022	CO	5.75212   
 17:08 01/22/2022	CO	5.75211    
